appId: com.adriano.sharetheimage
---
- launchApp:
    clearState: true
    arguments:
        mockMode: "Success"
- assertVisible:
    id: "Search"
- scroll
- tapOn:
    point: "50%,50%"
- assertVisible: "Photographer"
- tapOn: "Back"
- assertVisible:
    id: "Search"
