appId: com.adriano.sharetheimage
---
- launchApp
- assertVisible: "Search"
- scroll
- setAirplaneMode: enabled
- assertVisible: "You are currently offline"
- tapOn:
    point: "50%,50%"
- assertVisible: "Photographer"
- setAirplaneMode: disabled
